# shikaku

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  errors.rs  main.rs  routes.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  cert_master.rs  favorites.rs  mod.rs  own_certs.rs  users.rs
backend/src/middleware/: auth.rs
backend/src/models/: cert_master.rs  favorite.rs  mod.rs  own_cert.rs  session.rs  user.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/atoms/: AppButton.vue  AppInput.vue  GoodMark.vue  HoursCounter.vue  StatusBadge.vue
frontend/src/components/molecules/: CertForm.vue  CertRow.vue  ConfirmDelete.vue  ToastItem.vue  UserRow.vue
frontend/src/components/organisms/: AppHeader.vue  CertList.vue  GlobalUserList.vue  ToastContainer.vue
frontend/src/composables/: useAuth.ts  useCerts.ts  useFavorites.ts  useToast.ts
frontend/src/stores/: auth.ts  certs.ts  users.ts
frontend/src/styles/: main.scss
frontend/src/types/: auth.ts  certification.ts  user.ts
frontend/src/views/: DashboardView.vue  LoginView.vue
sql/: 01_create_tables.sql  02_seed_certmaster.sql
